# corruptmnist

./: data.py  main.py  model.py
.dvc/: config
corruptmnist/: Makefile  README.md  pyproject.toml
corruptmnist/corruptmnist/: predict_model.py  train_model.py
corruptmnist/corruptmnist/data/: make_dataset.py
corruptmnist/corruptmnist/models/: model.py
corruptmnist/corruptmnist/models/checkpoints/: checkpoint.pth
corruptmnist/corruptmnist/visualizations/: visualize.py
corruptmnist/data/processed/: train_target.pt
corruptmnist/docs/: mkdocs.yaml
corruptmnist/docs/source/: index.md
corruptmnist/reports/output/: predictions.pt
